Fix z-index interplay between toolbar/sidebar/tooltips/modals

--- a/src/styles/editor.less
+++ b/src/styles/editor.less
@@ -38,7 +38,7 @@ body {
   background-color: #f5f5f5;
   padding: 0 5px;
   margin-left: auto;
-  z-index: 2000;
+  z-index: 200;
 
   :not(.btn-group) > .btn-group {
     margin: 5px;
@@ -60,7 +60,7 @@ body {
     top: 44px;
     bottom: 0;
     right: 0;
-    z-index: 1000;
+    z-index: 100;
     display: block;
     padding-top: 20px;
     overflow-x: hidden;
